--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-NOTE_SERVICE_ROUTE='localhost'
+NOTE_SERVICE_ROUTE='192.168.213.133'
 NOTE_SERVICE_PORT=30010
 
-BEHAVE_SERVICE_ROUTE='localhost'
+BEHAVE_SERVICE_ROUTE='192.168.213.133'
 BEHAVE_SERVICE_PORT=30020
 
-QUERY_SERVICE_ROUTE='localhost'
+QUERY_SERVICE_ROUTE='192.168.213.133'
 QUERY_SERVICE_PORT=30030
